copied from other branch, ready for pr
Signed-off-by: TJ Neuenfeldt <tjneu@amazon.com>